[package]
name = "snake-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
# mini-redis = "0.4"
crossterm = "0.26.1"

